--- a/file1.html
+++ b/file1.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ITMD-361 Internet Technologies and Web Design</title>
+	<title> ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
+  <p> Hello world. This is my first website!</p>
   <p>I need to add a heading</p>
 </body>
 </html>
