--- a/file1.html
+++ b/file1.html
@@ -5,7 +5,7 @@
 	<title> ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p> Hello world. This is my first website!</p>
-  <p>I need to add a heading</p>
+  <p> Hello world. This is my first website! </p>
+  <p>I need to add a heading. My name is AMy! </p>
 </body>
 </html>
