I fixed my name.

--- a/file1.html
+++ b/file1.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p> Hello world. This is my first website! </p>
-  <p>I need to add a heading. My name is AMy! </p>
+  <p>I need to add a heading. My name is Amy! </p>
 </body>
 </html>
