I went ahead and inserted me header, changed the title of the page, and edited my comment paragraph.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> ITMD-361 Internet Technologies and Web Design</title>
+	<title> ITMD-361 Amairani Lopez Lab 1</title>
 </head>
 <body>
-  <p> Hello world. This is my first website! </p>
-  <p>I need to add a heading. My name is Amy! </p>
+	<header id="header">
+	 <h1>Lab 1 About Amairani </h1>
+	</header>
+  <p>Hello web users! My name is Amairani, but you can call me Amy since it is easier.\n My major is ITM and hope to learn a lot. </p>
 </body>
 </html>
