--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 	<header id="header">
-	 <h1>Lab 1 About Amairani </h1>
+	 <h1>Hello! Welcome to Lab 1</h1>
 	</header>
-  <p>Hello web users! My name is Amairani, but you can call me Amy since it is easier.\n My major is ITM and hope to learn a lot. </p>
+  <p>Hello web users! My name is Amairani, but you can call me Amy since it is easier.</p>
+  <p>My major is ITM and hope to learn a lot.</p>
+  <p>I am looking forward to making a really good website.</p>
 </body>
 </html>
