--- a/index.html
+++ b/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> ITMD-361 Amairani Lopez Lab 1</title>
+	<title> ITMD-361 Internet Technologies and Web Design</title>
 </head>
-<body>
-	<header id="header">
-	 <h1>Hello! Welcome to Lab 1</h1>
-	</header>
-  <p>Hello web users! My name is Amairani, but you can call me Amy since it is easier.</p>
-  <p>My major is ITM and hope to learn a lot.</p>
-  <p>I am looking forward to making a really good website.</p>
-</body>
+ <body>
+  <header id="header">
+	 <h1>ITMD-361 Internet Technologies and Web Design</h1>
+  </header>
+  <section>
+	<h3>Spring 2018 </h3>
+	  <p>Hello web users! My name is Amairani Lopez. My e-mail is alopez21@hawk.iit.edu .</p>
+	<h2>Professor: </h2>
+	  <p>Daniel Krieglstein</p>
+	<h2>Lecture Days, Time and Place: </h2>
+	  <p>Wednesday 6:25 pm to 9:05pm, John T. Rettaliata Engineering Center Auditorium, Room 104</p>
+	<h2>Course Catalog Description: </h2>
+	  <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript, jQuery and graphical applications as well as the client and server architecture of the internet and related web technologies. The creation and deployment of modern, standards-compliant web pages are addressed. Students create and deploy a Web site with multiple pages and cross-linked structures. Prerequisites: [none] Credit: 2-2-3 Semester Hours </p>
+	<h2>Course Outcomes: </h2>
+	  <p>Students completing this course will be able to:</p>
+		<ul> 
+		  <li>Recognize HTML, CSS and JavaScript mark-up and code.</li>
+		  <li>Select the proper mark-up tags or code to achieve a particular result.</li>
+		  <li>Identify improperly used mark-up and code.</li>
+		  <li>Produce modern standards complaint web pages.</li>
+		  <li>Deploy web pages to a public server.</li>
+		</ul>
+	<h2>Course Objectives: </h2>
+	  <p>At the coclusion of this course, each sucessful student will be able to:</p>
+		<ul> 
+		  <li>Explain the client and server architecture of the Internet and related technologies.</li>
+		  <li>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, jQuery, and images.</li>
+		  <li>Deploy web pages to a Linux- based web server using sftp.</li>
+		</ul>
+  </section>
+ </body>
 </html>
