--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h2>Lecture Days, Time and Place: </h2>
 	  <p>Wednesday 6:25 pm to 9:05pm, John T. Rettaliata Engineering Center Auditorium, Room 104</p>
 	<h2>Course Catalog Description: </h2>
-	  <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript, jQuery and graphical applications as well as the client and server architecture of the internet and related web technologies. The creation and deployment of modern, standards-compliant web pages are addressed. Students create and deploy a Web site with multiple pages and cross-linked structures. Prerequisites: [none] Credit: 2-2-3 Semester Hours </p>
+	  <p>This course will cover the creation of Web pages and sites using HTML, CSS, JavaScript, jQuery and graphical applications as well as the client and server architecture of the Internet and related web technologies. The creation and deployment of modern, standards-compliant web pages are addressed. Students create and deploy a Web site with multiple pages and cross-linked structures. Prerequisites: [none] Credit: 2-2-3 Semester Hours </p>
 	<h2>Course Outcomes: </h2>
 	  <p>Students completing this course will be able to:</p>
 		<ul> 
@@ -27,7 +27,7 @@
 		  <li>Deploy web pages to a public server.</li>
 		</ul>
 	<h2>Course Objectives: </h2>
-	  <p>At the coclusion of this course, each sucessful student will be able to:</p>
+	  <p>At the conclusion of this course, each successful student will be able to:</p>
 		<ul> 
 		  <li>Explain the client and server architecture of the Internet and related technologies.</li>
 		  <li>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, jQuery, and images.</li>
